# fish-factory

./: CMakeLists.txt  build64.bat  build86.bat  clean.bat  debug.bat  grid_guide.txt  preconfig.bat  update.bat
internal/core/: Fish_Factory.cpp  Legacy.hpp  Preloader.cxx  Preloader.h
internal/headers/: Audio_Handler.h  Connectables.h  Data_Handler.h  Grid_Handler.h  Interface_Handler.h  Items.h  Render_Handler.h  Terminal_Handler.h  Transition_Handler.h  Tutorial_Handler.h  UI_Handler.h
internal/precompiled/: Core.h  Wrapper.hpp
internal/source/: Audio_Handler.cpp  Data_Handler.cpp  Fish_Handler.cxx  Grid_Handler.cpp  Interface_Handler.cxx  Item_Handler.cpp  Pipe_Handler.cxx  Recipe_Handler.cpp  Render_Handler.cxx  Terminal_Handler.cxx  Transition_Handler.cpp  Tutorial_Handler.cpp  UI_Handler.cxx  Wire_Handler.cxx
modules/neutral/Assets/Data/: Metadata.json
modules/tmp/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackProjectConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  SDL3-shared.vcxproj  SDL3-shared.vcxproj.filters  SDL3.sln  SDL3_test.vcxproj  SDL3_test.vcxproj.filters  SDL3headersTargets.cmake  SDL3sharedTargets.cmake  SDL3testTargets.cmake  SDL_uclibc.vcxproj  SDL_uclibc.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  cmake_uninstall.cmake  sdl3.pc  uninstall.vcxproj  uninstall.vcxproj.filters
modules/tmp/Debug/: SDL3.exp  SDL3_test.lib  SDL_uclibc.lib
modules/tmp/SDL3-shared.dir/Debug/: SDL3.dll.recipe
modules/tmp/SDL3-shared.dir/Debug/SDL3-shared.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
modules/tmp/SDL3_test.dir/Debug/SDL3_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
modules/tmp/SDL_uclibc.dir/Debug/SDL_uclibc.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SDL_uclibc.lastbuildstate
modules/tmp/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
modules/tmp/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
modules/tmp/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
modules/tmp/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
